crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__preview__RUF008.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
assertion_line: 147
---
RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008.py:10:34
   |
 8 | @dataclass
 9 | class A:
10 |     mutable_default: list[int] = []
   |                                  ^^
11 |     immutable_annotation: typing.Sequence[int] = []
12 |     without_annotation = []
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008.py:20:34
   |
18 | @dataclass
19 | class B:
20 |     mutable_default: list[int] = []
   |                                  ^^
21 |     immutable_annotation: Sequence[int] = []
22 |     without_annotation = []
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008.py:31:36
   |
29 | @dataclass
30 | class AWithQuotes:
31 |     mutable_default: 'list[int]' = []
   |                                    ^^
32 |     immutable_annotation: 'typing.Sequence[int]' = []
33 |     without_annotation = []
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008.py:32:52
   |
30 | class AWithQuotes:
31 |     mutable_default: 'list[int]' = []
32 |     immutable_annotation: 'typing.Sequence[int]' = []
   |                                                    ^^
33 |     without_annotation = []
34 |     correct_code: 'list[int]' = KNOWINGLY_MUTABLE_DEFAULT
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008.py:36:51
   |
34 |     correct_code: 'list[int]' = KNOWINGLY_MUTABLE_DEFAULT
35 |     perfectly_fine: 'list[int]' = field(default_factory=list)
36 |     class_variable: 'typing.ClassVar[list[int]]'= []
   |                                                   ^^
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008.py:42:48
   |
40 | @dataclass
41 | class C:
42 |     mutable_default: list[int] = field(default=[])  # RUF008
   |                                                ^^
43 |     mutable_default2: dict[str, int] = field(default={})  # RUF008
44 |     mutable_default3: set[int] = field(default=set())  # RUF008
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008.py:43:54
   |
41 | class C:
42 |     mutable_default: list[int] = field(default=[])  # RUF008
43 |     mutable_default2: dict[str, int] = field(default={})  # RUF008
   |                                                      ^^
44 |     mutable_default3: set[int] = field(default=set())  # RUF008
45 |     mutable_default4: dict[str, int] = field(default=dict())  # RUF008
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008.py:44:48
   |
42 |     mutable_default: list[int] = field(default=[])  # RUF008
43 |     mutable_default2: dict[str, int] = field(default={})  # RUF008
44 |     mutable_default3: set[int] = field(default=set())  # RUF008
   |                                                ^^^^^
45 |     mutable_default4: dict[str, int] = field(default=dict())  # RUF008
46 |     correct_factory: list[int] = field(default_factory=list)  # okay
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008.py:45:54
   |
43 |     mutable_default2: dict[str, int] = field(default={})  # RUF008
44 |     mutable_default3: set[int] = field(default=set())  # RUF008
45 |     mutable_default4: dict[str, int] = field(default=dict())  # RUF008
   |                                                      ^^^^^^
46 |     correct_factory: list[int] = field(default_factory=list)  # okay
47 |     immutable_default: tuple[int, ...] = field(default=())  # okay
   |
