crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__preview__RUF008_RUF008_attrs.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008_attrs.py:13:34
   |
13 |     mutable_default: list[int] = []
   |                                  ^^
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008_attrs.py:23:34
   |
23 |     mutable_default: list[int] = []
   |                                  ^^
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008_attrs.py:33:34
   |
33 |     mutable_default: list[int] = []
   |                                  ^^
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008_attrs.py:42:34
   |
42 |     mutable_default: list[int] = []
   |                                  ^^
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008_attrs.py:53:54
   |
53 |     mutable_default: list[int] = attrs.field(default=[])  # RUF008
   |                                                      ^^
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008_attrs.py:54:60
   |
54 |     mutable_default2: dict[str, int] = attrs.field(default={})  # RUF008
   |                                                            ^^
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008_attrs.py:55:54
   |
55 |     mutable_default3: set[int] = attrs.field(default=set())  # RUF008
   |                                                      ^^^^^
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008_attrs.py:56:60
   |
56 |     mutable_default4: dict[str, int] = attrs.field(default=dict())  # RUF008
   |                                                            ^^^^^^
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008_attrs.py:67:50
   |
67 |     mutable_default: list[int] = attr.ib(default=[])  # RUF008
   |                                                  ^^
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008_attrs.py:68:56
   |
68 |     mutable_default2: dict[str, int] = attr.ib(default={})  # RUF008
   |                                                        ^^
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008_attrs.py:75:54
   |
75 |     mutable_default: list[int] = attr.attrib(default=[])  # RUF008
   |                                                      ^^
   |

RUF008 Do not use mutable default values for dataclass attributes
  --> RUF008_attrs.py:76:54
   |
76 |     mutable_default2: set[int] = attr.attrib(default=set())  # RUF008
   |                                                      ^^^^^
   |
