crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__preview__RUF013_RUF013_1.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF013_1.py:4:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
  |
4 | def f(arg: int = None):  # RUF013
  |            ^^^ RUF013
5 |     pass
  |
  = help: Convert to `T | None`

ℹ Safe fix
1 1 | # No `typing.Optional` import
2 2 | 
3 3 | 
4   |-def f(arg: int = None):  # RUF013
  4 |+def f(arg: int | None = None):  # RUF013
5 5 |     pass
